test/DaedalusCompiler.Tests/SemanticErrors/ReferenceResolverTests.cs
namespace DaedalusCompiler.Tests.SemanticErrors
{
    public class ReferenceResolverTests : BaseSemanticErrorsTests
    {
        
    }
}